fix aria state and visibility on main menu

--- a/src/components/mainMenu/mainMenu.scss
+++ b/src/components/mainMenu/mainMenu.scss
@@ -82,6 +82,11 @@
             transform: translateX(0);
             background-color: none;
             transition: none;
+
+            &, 
+            [aria-expanded] > & {
+                visibility: visible;
+            }
         }
 
         &__additional-items {
